fix path to svg and fix horizontal scroll

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -23,4 +23,5 @@ body {
   min-height: 100vh;
   background-color: #1c1d20;
   margin: 0;
+  overflow-x: hidden;
 }
